--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "classnames": "^2.2.6",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
     "react-player": "^1.11.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-select": "^3.0.4"
+    "react-select": "^3.0.4",
+    "universal-cookie": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
