--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.8.6",
     "react-player": "^1.11.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
+    "react-scroll": "^1.7.16",
     "react-select": "^3.0.4",
     "universal-cookie": "^4.0.2"
   },
